--- a/config.toml
+++ b/config.toml
@@ -22,25 +22,54 @@ pluralizelisttitles = false
   title = "google-plus"
   url = "https://plus.google.com/111133613917552048578"
 
-  
+
 [[menu.main]]
     name   = "Blog"
     url    = "/post/"
     weight = -200
 
 [[menu.main]]
-    name   = "Download"
+	  name   = "Download"
+		weight = 600
+
+[[menu.main]]
+	  parent = "Download"
+    name   = "KiCad Software"
     url    = "/download/"
-    weight = 600
+    weight = 400
+
+[[menu.main]]
+    parent = "Download"
+		name   = "KiCad Libraries"
+		url    = "/libraries/"
+		weight = 300
 
 [[menu.main]]
     name   = "Contribute"
     weight = 500
 
 [[menu.main]]
+	  parent = "Contribute"
+		url    = "/contribute/libraries/"
+		name   = "Libraries"
+		weight = 600
+
+[[menu.main]]
+		parent = "Contribute"
+		url    = "/contribute/developers/"
+		name   = "Developers"
+		weight = 500
+
+[[menu.main]]
+		parent = "Contribute"
+		url    = "/contribute/docs-team/"
+		name   = "Docs Team"
+		weight = 400
+
+[[menu.main]]
     name   = "Community"
     weight = 10
-	
+
 [[menu.main]]
     parent = "Community"
     name   = "Forums"
@@ -52,7 +81,7 @@ pluralizelisttitles = false
     name   = "User Mailing List"
     url    = "http://groups.yahoo.com/group/kicad-users/"
     weight = 15
-	
+
 [[menu.main]]
     parent = "Discover"
     name   = "Made With KiCad"
@@ -68,7 +97,7 @@ pluralizelisttitles = false
 [[menu.main]]
     name   = "Help"
     weight = 100
-	
+
 [[menu.main]]
     name   = "About"
     weight = 900
